[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/FlyingGhost/FlyingGhost.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/SwampStage/FlyingGhost/FlyingGhost-emission-mask.png" type="Texture" id=3]
[ext_resource path="res://Shaders/GlowShader.shader" type="Shader" id=4]
[ext_resource path="res://Script/Enemies/FlyingGhost.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=14]



[sub_resource type="CapsuleShape2D" id=1]
radius = 10.7329
height = 14.3832

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/glow_color = Color( 0, 0.505882, 1, 0.74902 )
shader_param/emission_texture = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 31, 44 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 31, 0, 31, 44 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 62, 0, 31, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 93, 0, 31, 44 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 14.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 200, 153 )

[node name="FlyingGhost" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 10
script = ExtResource( 6 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="0"]
position = Vector2( 0, -16 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Body" parent="." index="1"]
position = Vector2( 0, -16 )

[node name="Sprite" parent="Body" index="0"]
material = SubResource( 2 )
frames = SubResource( 7 )
animation = "idle"
frame = 3
playing = true

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, 1.27283 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -22 )
shape = SubResource( 8 )

[node name="Tween" type="Tween" parent="." index="5"]

[node name="TriggerArea" type="Area2D" parent="." index="6"]
position = Vector2( 0, -16 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" index="0"]
visible = false
shape = SubResource( 9 )
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered" flags=6]
